--- a/renting/templates/base.html
+++ b/renting/templates/base.html
@@ -18,80 +18,106 @@
         <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
     </head>
     <body>
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand navbar-primary bg-primary">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="index.html">Rental Management</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('home_page')}}" style="font-size: large; color:white;">Rental Management</a>
             <!-- Sidebar Toggle-->
-            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!" style="color: black;"><i class="fas fa-bars"></i></button>
+            
+           
+            {% if current_user.is_authenticated %} 
+                <span class="navbar-text" style="margin-left: 30%;">
+                 <a class="nav-item" style="text-decoration: none; font-size: large;color: white;"> Welcome {{ current_user.username }}</a>
+      
+                <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" href="{{ url_for('logout_page') }}"> Logout</a>
+               </span>
+             {% else %} 
+             <span class="navbar-text" style="margin-left: 30%;">
+                  <a class="nav-item" style='text-decoration: none; font-size: large; color: white;' id="login-user" href="{{ url_for('login_page') }}"> Login</a>
+      
+                  <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" id="register-user" href="{{ url_for('register_page')}}"> Register</a>
+               </span>
+           
+             {% endif %}
+        
+      
             <!-- Navbar Search-->
             <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
                 <div class="input-group">
+                    
                     <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                     <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                    
                 </div>
             </form>
             <!-- Navbar-->
-            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4"> 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: black;"><i class="fas fa-user fa-fw" style="color:black;"></i></a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#!">Settings</a></li>
                         <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                         <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                        <li><a class="dropdown-item" href="{{url_for('logout_page')}}">Logout</a></li>
                     </ul>
                 </li>
             </ul>
+            
         </nav>
         <div id="layoutSidenav">
             <div id="layoutSidenav_nav">
-                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                <nav class="sb-sidenav accordion sb-sidenav-primary bg-primary" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             
-                            <a class="nav-link" href="{{url_for('home_page')}}">
-                                <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            <a class="nav-link" href="{{url_for('home_page')}}" style="color: white;">
+                                <div class="sb-nav-link-icon"><i class="fas fa-home" style="color:white;"></i></div>
                                 Home
                             </a>
-                            <div class="sb-sidenav-menu-heading">House Management</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                                <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            <div class="sb-sidenav-menu-heading" style="color: white;">House Management</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts" style="color:white;">
+                                <div class="sb-nav-link-icon"><i class="fas fa-city" style="color: white;"></i></div>
                                 Houses
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('house_list_page')}}">House List</a>
+                                    <a class="nav-link" href="{{url_for('house_list_page')}}" style="color:white;">House List</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Tenants Management</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
-                                <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            <div class="sb-sidenav-menu-heading" style="color: white;">Tenants Management</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
+                                <div class="sb-nav-link-icon"><i class="fas fa-users" style="color:white;"></i></div>
                                 Tenants
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                    
                             <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}">Tenants List</a>
+                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}" style="color:white;">Tenants List</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading">Addons</div>
-                            <a class="nav-link" href="charts.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                                Charts
+                            <div class="sb-sidenav-menu-heading" style="color: white;">Payments Management</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#PaymentCollapse" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
+                                <div class="sb-nav-link-icon"><i class="fas fa-coins" style="color:white;"></i></div>
+                                Payment
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
-                            <a class="nav-link" href="tables.html">
-                                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                                Tables
-                            </a>
+                   
+                            <div class="collapse" id="PaymentCollapse" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" href="{{url_for('tenant_payment')}}" style="color:white;">Pay</a>
+                                   
+                                </nav>
+                            </div>
+                            
                         </div>
                     </div>
-                    <div class="sb-sidenav-footer">
+                    <div class="sb-sidenav-footer" style="color: white;">
                         <div class="small">Logged in as:</div>
-                        Mapande
+                        {{current_user.username}}
                     </div>
                 </nav>
             </div>
@@ -118,11 +144,11 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                            <div class="text-muted">Mapande &copy; Tenants Control {{year}}</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <!-- <a href="#">Privacy Policy</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">Terms &amp; Conditions</a> -->
                             </div>
                         </div>
                     </div>
