--- a/renting/templates/index.html
+++ b/renting/templates/index.html
@@ -4,18 +4,20 @@
 Home Page
 {% endblock %}
 {% block content %}
-<h1 class="mt-4">Dashboard</h1>
+
+<h1 class="mt-4">Rents Due for the year {{year}}</h1>
+
 <ol class="breadcrumb mb-4">
-    <li class="breadcrumb-item active">Dashboard</li>
+    <li class="breadcrumb-item active">Your Tenants Monthly Payments</li>
 </ol>
     {% for month in tenant_month %}
     <div class="col-md-2 mb-2">
-        <div class="card bg-success text-white shadow">
+        <div class="card bg-primary text-white shadow">
            
            <a href="tenantmonthly/{{month.month_name}}" style="text-decoration: none;">
                 <div class="card-body">
                     
-                    <div class="text-white-50 small">{{month.month_name}} </div>
+                    <div class="text-white-50">{{month.month_name}} </div>
                 </div>
             </a>
         </div>
