--- a/renting/templates/tenantpayment.html
+++ b/renting/templates/tenantpayment.html
@@ -4,24 +4,22 @@
 Payment 
 {% endblock %} 
 {% block content %}
-<form class="form-inline" method="post" action="/searchtenant">  
-   {{ form.hidden_tag() }}
-  <div class="form-group row">
-    <label class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left"></label>
-    <div class="input-group">
-      
-      <input type="text" class="form-control" id="inputSearch" aria-label="Search for..." aria-describedby="btninputSearch" placeholder="Search for Tenant by phone number">
-      <button class="btn btn-primary" id="btninputSearch" type="button"><i class="fas fa-search"></i></button>
-    </div>
-  </div>
-  
- 
-</form>
+
 <div class="content-wrapper">
     <div class="content-heading"><h1>&nbsp; Make Payment</h1></div>
     
     <div class="container-fluid">
-       
+      <form class="form-inline" method="post" action="/searchtenant">  
+         {{ form.hidden_tag() }}
+        <div class="form-group row">
+          <label class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left"></label>
+          <div class="input-group">
+            
+            <input type="text" class="form-control" id="inputSearch" aria-label="Search for..." aria-describedby="btninputSearch" placeholder="Search for Tenant by phone number" required>
+            <button class="btn btn-primary" id="btninputSearch" type="button"><i class="fas fa-search"></i></button>
+          </div>
+        </div>
+      </form>
        <div class="card card-default d-lg-block">
       
           <div class="row">
@@ -57,14 +55,7 @@ Payment
                      <div class="form-group row">
                         {{ form.balanced_amount.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
                               <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.balanced_amount(class="form-control", placeholder="Due Amount", autocomplete="off", readonly=readonly) }}
-                             </div>
-                     </div>
-                     <p></p>
-                     <div class="form-group row">
-                        {{ form.paidamount.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.paidamount(class="form-control", placeholder="Amount to Pay", autocomplete="off") }}
+                                 {{ form.balanced_amount(class="form-control", placeholder="Previous Balance", autocomplete="off", readonly=readonly) }}
                              </div>
                      </div>
                      <p></p>
@@ -75,9 +66,22 @@ Payment
                                  {{ form.date_end(class="form-control datepicker", placeholder="Payable Months", autocomplete="off") }}
                              </div>
                      </div>
+                     <p></p>
                      
-                    
-                    
+                     <div class="form-group row">
+                        {{ form.total_payable.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
+                              <div class="col-xl-6 col-md-6 col-xs-12">
+                                 {{ form.total_payable(class="form-control", placeholder="Due Amount", autocomplete="off", readonly=readonly) }}
+                             </div>
+                     </div>
+                     <p></p>
+                     
+                     <div class="form-group row">
+                        {{ form.paidamount.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
+                              <div class="col-xl-6 col-md-6 col-xs-12">
+                                 {{ form.paidamount(class="form-control", placeholder="Amount to Pay", autocomplete="off") }}
+                             </div>
+                     </div>
                      <p></p>
                      <div class="form-group row">
                         {{ form.payment_receipt.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
@@ -111,11 +115,11 @@ Payment
    date_end_select.onchange = function(){
       let start_date = new Date();
       let end_date = new Date(date_end_select.value);
-     
+      var total_payable  = 0.00;
       var numofmonths = monthDiff(start_date, end_date);
       var rent_per_month = document.getElementById('rent_per_month');
       var total = document.getElementById('total_payable');
-      var total_payable = (rent_per_month.value * (numofmonths+1));
+      total_payable = (rent_per_month.value * (numofmonths+1));
       total.value = total_payable;
 
 
@@ -143,8 +147,12 @@ function formatDate(date) {
 document.getElementById('btninputSearch').onclick = function(){myFunc()};
  function myFunc()
  {
-    //alert('ok');
+    
     let phone = $('#inputSearch').val();
+    if (phone === ''){
+       alert('');
+       document.getElementById('inputSearch').required;
+    }
     fetch('/searchtenant/' +phone).then(function(response, e)
        {
         //console.table(response);
