--- a/renting/templates/leasetenant.html
+++ b/renting/templates/leasetenant.html
@@ -5,17 +5,17 @@ Create Tenant
 {% endblock %} 
 {% block content %}
 <div class="content-wrapper">
-    <div class="content-heading"><h1>&nbsp; Create Tenant</h1></div>
+    <div class="content-heading"><h1>&nbsp; PANGISHA MPANGAJI</h1></div>
     <div class="container-fluid">
        <div class="card card-default d-lg-block">
           <div class="row">
              <div class="col col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                <div class="card-title text-left alert alert-default"><b style="font-size:18px;">Create Tenant</b></div>
+                <div class="card-title text-left alert alert-default"><b style="font-size:18px;">MAELEZO YA MPANGAJI</b></div>
                 <div class="card-body">
                    <form class="form-leasetenant" method="POST" action="/leasetenant" enctype="multipart/form-data">
                         {{ form.hidden_tag() }}
                         <div class="form-group row">
-                           <label for="txtPost" class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left">Photo:</label>
+                           <label for="txtPost" class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left">PICHA:</label>
             
                            <div class="col-xl-6 col-md-6 col-xs-12">
                               <span class="input-group-btn">
