--- a/renting/templates/tenantlist.html
+++ b/renting/templates/tenantlist.html
@@ -4,25 +4,25 @@
 Tenant 
 {% endblock %} 
 {% block content %}
-<div class="content-heading"><h1>Tenant List</h1></div>
+<div class="content-heading"><h1>ORODHA YA WAPANGAJI</h1></div>
 <div class="row">
     <div class="col-lg-12 mb-2">
         <a href="{{url_for('lease_tenant')}}"
            class=" d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Create new Tenant</a>
+                class="fas fa-download fa-sm text-white-50"></i>PANGISHA MPANGAJI MPYA</a>
     </div>
 </div>
 <div class="card-body">
     <table id="datatablesSimple">
         <thead>
             <tr>
-                <th>Full Name </th>
+                <th>JINA KAMILI </th>
                
-                <th>NIDA Number</th>
-                <th>Phone Number</th>
-                <th>House Name</th>
-                <th>Rooms Occupied</th>
-                <th>Rent per month</th>
+                <th>NAMBA YA NIDA</th>
+                <th>NAMBA YA SIMU</th>
+                <th>JINA LA NYUMBA</th>
+                <th>IDADI YA VYUMBA</th>
+                <th>KODI YA MWEZI</th>
                 <th></th>
                 <th></th>
                 <th></th>
