--- a/renting/templates/base.html
+++ b/renting/templates/base.html
@@ -20,22 +20,22 @@
     <body>
         <nav class="sb-topnav navbar navbar-expand navbar-primary bg-primary">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="{{ url_for('home_page')}}" style="font-size: large; color:white;">Rental Management</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('home_page')}}" style="font-size: large; color:white;">USIMAMIZI WA KODI</a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!" style="color: black;"><i class="fas fa-bars"></i></button>
             
            
             {% if current_user.is_authenticated %} 
                 <span class="navbar-text" style="margin-left: 30%;">
-                 <a class="nav-item" style="text-decoration: none; font-size: large;color: white;"> Welcome {{ current_user.username }}</a>
+                 <a class="nav-item" style="text-decoration: none; font-size: large;color: white;"> karibu {{ current_user.username }},</a>
       
-                <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" href="{{ url_for('logout_page') }}"> Logout</a>
+                <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" href="{{ url_for('logout_page') }}"> Toka </a>
                </span>
              {% else %} 
              <span class="navbar-text" style="margin-left: 30%;">
-                  <a class="nav-item" style='text-decoration: none; font-size: large; color: white;' id="login-user" href="{{ url_for('login_page') }}"> Login</a>
+                  <a class="nav-item" style='text-decoration: none; font-size: large; color: white;' id="login-user" href="{{ url_for('login_page') }}"> Ingia</a>
       
-                  <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" id="register-user" href="{{ url_for('register_page')}}"> Register</a>
+                  <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" id="register-user" href="{{ url_for('register_page')}}"> Jiandikishe</a>
                </span>
            
              {% endif %}
@@ -72,43 +72,43 @@
                             
                             <a class="nav-link" href="{{url_for('home_page')}}" style="color: white;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-home" style="color:white;"></i></div>
-                                Home
+                                NYUMBANI
                             </a>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">House Management</div>
+                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA NYUMBA</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts" style="color:white;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-city" style="color: white;"></i></div>
-                                Houses
+                                USAJILI WA NYUMBA
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('house_list_page')}}" style="color:white;">House List</a>
+                                    <a class="nav-link" href="{{url_for('house_list_page')}}" style="color:white;">ORODHA YA NYUMBA</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">Tenants Management</div>
+                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA WAPANGAJI</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-users" style="color:white;"></i></div>
-                                Tenants
+                                USAJILI WA WAPANGAJI
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                    
                             <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}" style="color:white;">Tenants List</a>
+                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}" style="color:white;">ORODHA YA WAPANGAJI</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">Payments Management</div>
+                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA MALIPO</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#PaymentCollapse" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-coins" style="color:white;"></i></div>
-                                Payment
+                                MALIPO
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                    
                             <div class="collapse" id="PaymentCollapse" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('tenant_payment')}}" style="color:white;">Pay</a>
+                                    <a class="nav-link" href="{{url_for('tenant_payment')}}" style="color:white;">FANYA MALIPO</a>
                                    
                                 </nav>
                             </div>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="sb-sidenav-footer" style="color: white;">
-                        <div class="small">Logged in as:</div>
+                        <div class="small">Umeingia kama:</div>
                         {{current_user.username}}
                     </div>
                 </nav>
@@ -144,7 +144,7 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid px-4">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Mapande &copy; Tenants Control {{year}}</div>
+                            <div class="text-muted">Mapande &copy; udhibiti wa wapangaji {{year}}</div>
                             <div>
                                 <!-- <a href="#">Privacy Policy</a>
                                 &middot;
