--- a/renting/templates/house_list.html
+++ b/renting/templates/house_list.html
@@ -5,23 +5,23 @@ House
 {% endblock %} 
 {% block content %}
 
-<div class="content-heading"><h1>House List</h1></div>
+<div class="content-heading"><h1>ORODHA YA NYUMBA</h1></div>
 <div class="row">
     <div class="col-lg-12 mb-2">
         <a href="{{url_for('house_page')}}"
            class=" d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Create new house</a>
+                class="fas fa-download fa-sm text-white-50"></i> SAJILI NYUMBA MPYA</a>
     </div>
 </div>
 <div class="card-body">
     <table id="datatablesSimple">
         <thead>
             <tr>
-                <th>House Name </th>
-                <th>Location</th>
-                <th>Floor Number</th>
-                <th>Number of Rooms</th>
-                <th>Category</th>
+                <th>JINA LA NYUMBA </th>
+                <th>SEHEMU</th>
+                <th>GHOROFA</th>
+                <th>IDADI YA VYUMBA</th>
+                <th>AINA YA NUMBA</th>
                 <th></th>
                 <th></th>
                 <th></th>
