--- a/renting/templates/tenantpayment.html
+++ b/renting/templates/tenantpayment.html
@@ -6,105 +6,106 @@ Payment
 {% block content %}
 
 <div class="content-wrapper">
-    <div class="content-heading"><h1>&nbsp; Make Payment</h1></div>
-    
-    <div class="container-fluid">
-      <form class="form-inline" method="post" action="/searchtenant">  
-         {{ form.hidden_tag() }}
-        <div class="form-group row">
-          <label class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left"></label>
-          <div class="input-group">
-            
-            <input type="text" class="form-control" id="inputSearch" aria-label="Search for..." aria-describedby="btninputSearch" placeholder="Search for Tenant by phone number" required>
-            <button class="btn btn-primary" id="btninputSearch" type="button"><i class="fas fa-search"></i></button>
-          </div>
-        </div>
-      </form>
-       <div class="card card-default d-lg-block">
-      
-          <div class="row">
-               
-             <div class="col col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                <div class="card-title text-left alert alert-default"><b style="font-size:18px;">Make Payment</b></div>
-                <div class="card-body">
-                
-                   <form class="form-tenantpayment" method="POST" action="/tenantpayment">
+   <div class="content-heading">
+      <h1>&nbsp; FANYA MALIPO</h1>
+   </div>
+   <div class="container-fluid">
+  
+      <div class="card card-default d-lg-block">
+         <div class="row">
+            <div class="col col-xs-12 col-sm-8 col-md-8 col-lg-8">
+               <div class="card-title text-left alert alert-default"><b style="font-size:18px;">FANYA MALIPO</b></div>
+               <div class="card-body">
+                  <form class="form-tenantpayment" method="POST" action="/tenantpayment">
                      {{ form.hidden_tag() }}
-                     
+                     <div class="form-group row">
+                    <label>TAFUTA KWA SIMU YA MPANGAJI:</label>
+                        <div class="col-xl-2 col-md-6 col-xs-8 input-group">
+                           <input type="text" class="form-control" id="inputSearch" aria-label="Search for..." aria-describedby="btninputSearch" placeholder="Search for Tenant by phone number" required>
+                           <button class="btn btn-primary" id="btninputSearch" type="button"><i class="fas fa-search"></i></button>
+                        </div>
+                       
+                     </div>
+                     <p></p>
                      <div class="form-group row">
                         {{form.house_id.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left")}}
-                        <div class="col-xl-6 col-md-6 col-xs-12">
-                        {{form.house_id(class="form-control", placeholder="Tenant", autocomplete="off")}}
-                        </div>   
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{form.house_id(class="form-control", placeholder="Tenant", autocomplete="off")}}
+                        </div>
                      </div>
                      <p></p>
                      <div class="form-group row">
                         {{ form.tenant_id.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.tenant_id(class="form-control", placeholder="Tenant", autocomplete="off") }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.tenant_id(class="form-control", placeholder="Tenant", autocomplete="off") }}
+                        </div>
                      </div>
                      <p></p>
                      <div class="form-group row">
                         {{ form.rent_per_month.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.rent_per_month(class="form-control", placeholder="Rent payable", autocomplete="off", readonly=readonly) }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.rent_per_month(class="form-control", placeholder="Rent payable", autocomplete="off", readonly=readonly) }}
+                        </div>
                      </div>
                      <p></p>
                      <div class="form-group row">
                         {{ form.balanced_amount.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.balanced_amount(class="form-control", placeholder="Previous Balance", autocomplete="off", readonly=readonly) }}
-                             </div>
+                        <div class="col-xl-4 col-md-6 col-xs-12 input-group">
+                           
+                           {{ form.balanced_amount(class="form-control", placeholder="Previous Balance", autocomplete="off", readonly=readonly) }}
+                           <button class="btn btn-primary"  id="btnSearchBalance" type="button"><i class="fas fa-search"></i></button>
+                        </div>
+                   
                      </div>
                      <p></p>
-                     
                      <div class="form-group row">
                         {{ form.date_end.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.date_end(class="form-control datepicker", placeholder="Payable Months", autocomplete="off") }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.date_end(class="form-control datepicker", placeholder="Payable Months", autocomplete="off") }}
+                        </div>
                      </div>
                      <p></p>
-                     
                      <div class="form-group row">
                         {{ form.total_payable.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.total_payable(class="form-control", placeholder="Due Amount", autocomplete="off", readonly=readonly) }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.total_payable(class="form-control", placeholder="Due Amount", autocomplete="off", readonly=readonly) }}
+                        </div>
                      </div>
                      <p></p>
-                     
+                     <div class="form-group row">
+                        {{ form.paymenttype.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.paymenttype(class="form-control", placeholder="Due Amount", autocomplete="off") }}
+                        </div>
+                     </div>
+                     <p></p>
                      <div class="form-group row">
                         {{ form.paidamount.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.paidamount(class="form-control", placeholder="Amount to Pay", autocomplete="off") }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.paidamount(class="form-control", placeholder="Amount to Pay", autocomplete="off") }}
+                        </div>
                      </div>
                      <p></p>
                      <div class="form-group row">
                         {{ form.payment_receipt.label(class="text-bold col-xl-4 col-md-4 col-xs-12 col-form-label text-left") }}
-                              <div class="col-xl-6 col-md-6 col-xs-12">
-                                 {{ form.payment_receipt(class="form-control", placeholder="Payment Receipt Number", autocomplete="off") }}
-                             </div>
+                        <div class="col-xl-6 col-md-6 col-xs-12 input-group">
+                           {{ form.payment_receipt(class="form-control", placeholder="Payment Receipt Number", autocomplete="off") }}
+                        </div>
                      </div>
-                      <div style="display: none;">
-                     
+                     <div style="display: none;">
                         {{form.paymentdate()}}
                         {{form.month_name()}}
                         {{ form.date_start() }}
-                    </div>
-                    
-                      <br>
-                      <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Create">
-                   </form>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
+                     </div>
+                     <br>
+                     <input class="btn btn-primary" id="submit" name="submit" type="submit" value="Create">
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
  <script>
   
   
@@ -149,20 +150,17 @@ document.getElementById('btninputSearch').onclick = function(){myFunc()};
  {
     
     let phone = $('#inputSearch').val();
-    if (phone === ''){
-       alert('');
-       document.getElementById('inputSearch').required;
-    }
+  
     fetch('/searchtenant/' +phone).then(function(response, e)
        {
         //console.table(response);
        
             response.json().then(function(data)
             {
-             
+             console.table(data);
                 for(let tenant of data.tenants)
                 {
-                   $('#balanced_amount').val(tenant['balanced_amount']);
+                  
                    $('#house_id').val(tenant['house_id']);
                    $('#tenant_id').val(tenant['id']);
                    $('#rent_per_month').val(tenant['rent_per_month']);
@@ -174,10 +172,30 @@ document.getElementById('btninputSearch').onclick = function(){myFunc()};
            
        });
  }
-
-
-      
-
+ document.getElementById('btnSearchBalance').onclick = function(){balaneFunc()};
+ function balaneFunc()
+ {
+    
+    let tenant_id = tenant_id_select.value;
+    //alert(tenant_id);
+    fetch('/balancesearch/' +tenant_id).then(function(response, e)
+       {
+         response.json().then(function(data)
+         {
+             console.table(data);
+                for(let payment of data.paymentamount)
+                {
+                  
+                   $('#balanced_amount').val(payment['balanced_amount']);
+                   
+                }
+               
+               
+            });
+           
+       });
+   
+ }
 
  </script>
 {% endblock %}
