--- a/renting/templates/base.html
+++ b/renting/templates/base.html
@@ -20,12 +20,12 @@
     <body>
         <nav class="sb-topnav navbar navbar-expand navbar-primary bg-primary">
             <!-- Navbar Brand-->
-            <a class="navbar-brand ps-3" href="{{ url_for('home_page')}}" style="font-size: large; color:white;">USIMAMIZI WA KODI</a>
+            <a class="navbar-brand ps-3" href="{{ url_for('home_page')}}" style="font-size: large; color:white;"><b>USIMAMIZI WA KODI</b></a>
             <!-- Sidebar Toggle-->
             <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!" style="color: black;"><i class="fas fa-bars"></i></button>
             
            
-            {% if current_user.is_authenticated %} 
+            <!-- {% if current_user.is_authenticated %} 
                 <span class="navbar-text" style="margin-left: 30%;">
                  <a class="nav-item" style="text-decoration: none; font-size: large;color: white;"> karibu {{ current_user.username }},</a>
       
@@ -38,18 +38,20 @@
                   <a class="nav-item" style="text-decoration: none; font-size: large; color: white;" id="register-user" href="{{ url_for('register_page')}}"> Jiandikishe</a>
                </span>
            
-             {% endif %}
+             {% endif %} -->
         
       
             <!-- Navbar Search-->
+        
             <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-                <div class="input-group">
+                <div class="input-group" style="visibility: hidden;">
                     
                     <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
                     <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
                     
                 </div>
             </form>
+        
             <!-- Navbar-->
             <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4"> 
                 <li class="nav-item dropdown">
@@ -70,48 +72,48 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             
-                            <a class="nav-link" href="{{url_for('home_page')}}" style="color: white;">
+                            <a class="nav-link"  href="{{url_for('home_page')}}" style="color: white; font-size:small;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-home" style="color:white;"></i></div>
-                                NYUMBANI
+                                <b>NYUMBANI</b>
                             </a>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA NYUMBA</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts" style="color:white;">
+                      
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts" style="color:white; font-size: small;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-city" style="color: white;"></i></div>
-                                USAJILI WA NYUMBA
+                                <b>USAJILI WA NYUMBA</b>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('house_list_page')}}" style="color:white;">ORODHA YA NYUMBA</a>
+                                    <a class="nav-link" href="{{url_for('house_list_page')}}" style="color:white; font-size: small;">ORODHA YA NYUMBA</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA WAPANGAJI</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
+                           
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages" style="color:white; font-size: small;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-users" style="color:white;"></i></div>
-                                USAJILI WA WAPANGAJI
+                                <b>USAJILI WA WAPANGAJI</b>
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                    
                             <div class="collapse" id="collapsePages" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}" style="color:white;">ORODHA YA WAPANGAJI</a>
+                                    <a class="nav-link" href="{{url_for('tenant_list_page')}}" style="color:white;font-size: small;">ORODHA YA WAPANGAJI</a>
                                    
                                 </nav>
                             </div>
-                            <div class="sb-sidenav-menu-heading" style="color: white;">USIMAMIZI WA MALIPO</div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#PaymentCollapse" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
+                 
+                            <!-- <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#PaymentCollapse" aria-expanded="false" aria-controls="collapsePages" style="color:white;">
                                 <div class="sb-nav-link-icon"><i class="fas fa-coins" style="color:white;"></i></div>
                                 MALIPO
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
+                            </a> -->
                    
-                            <div class="collapse" id="PaymentCollapse" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                            <!-- <div class="collapse" id="PaymentCollapse" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="{{url_for('tenant_payment')}}" style="color:white;">FANYA MALIPO</a>
                                    
                                 </nav>
-                            </div>
+                            </div> -->
                             
                         </div>
                     </div>
