--- a/renting/templates/login.html
+++ b/renting/templates/login.html
@@ -27,7 +27,7 @@
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
                                     <div class="card-body">
-                                        <form class="form-login" method="POST" action="/login">
+                                        <form class="form-login" method="POST" action="/">
                                             {{ form.hidden_tag() }}
                                             <div class="form-floating mb-3">
                                                 {{ form.username(class="form-control", placeholder="Username") }}
