--- a/renting/templates/index.html
+++ b/renting/templates/index.html
@@ -5,7 +5,7 @@ Home Page
 {% endblock %}
 {% block content %}
 
-<h1 class="mt-4">Upangishaji wa nyumba {{year}}</h1>
+<h1 class="mt-4">Udhibiti wa nyumba {{year}}</h1>
 
 <ol class="breadcrumb mb-4">
     <li class="breadcrumb-item active">Nyumba</li>
