--- a/renting/templates/house_list.html
+++ b/renting/templates/house_list.html
@@ -13,7 +13,7 @@ House
                 class="fas fa-download fa-sm text-white-50"></i> SAJILI NYUMBA MPYA</a>
     </div>
 </div>
-
+{{file}}
     <table id="datatablesSimple">
         <thead>
             <tr>
