--- a/renting/templates/housedetails.html
+++ b/renting/templates/housedetails.html
@@ -8,7 +8,7 @@ House Details
              <div class="col col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="card-title text-left alert alert-default"><b style="font-size:22px;">TAARIFA ZA NYUMBA</b></div>
                 <div class="card" style="width:fit-content;">
-                    <img class="card-img-top" src="#" alt="{{house.house_name}}">
+                    <img class="card-img-top" src="/static/uploads/{{house.image_path}}" alt="{{house.house_name}}">
                     
                     <div class="card-body">
                     <h5 class="card-title">{{house.house_name}}</h5>
